# Furtherance

./: .gitignore  Cargo.toml  LICENSE  README.md  VERSION  build.rs  com.lakoliu.Furtherance.json  flake.nix  meson.build  meson_options.txt  shell.nix
.flatpak-builder/cache/refs/heads/x86_64-com.lakoliu.Furtherance.Devel.json/: init
.flatpak-builder/cache/refs/heads/x86_64-com.lakoliu.Furtherance.json/: init
.flatpak-builder/checksums/: x86_64-com.lakoliu.Furtherance.Devel.json  x86_64-com.lakoliu.Furtherance.json
.github/: FUNDING.yml
.github/workflows/: release.yml
assets/linux/: io.unobserved.furtherance.appdata.xml  io.unobserved.furtherance.appdata.xml.in  io.unobserved.furtherance.desktop  io.unobserved.furtherance.desktop.in  io.unobserved.furtherance.metainfo.xml
assets/linux/flatpak/: com.lakoliu.Furtherance.json  io.unobserved.furtherance.json  io.unobserved.furtherance.yml
assets/macos/Furtherance.app/Contents/: Info.plist
assets/macos/Furtherance.app/Contents/Resources/: Furtherance.icns  furtherance.icns
build-aux/flatpak/: com.lakoliu.Furtherance.Devel.json  com.lakoliu.Furtherance.Devel.json~
data/: com.lakoliu.Furtherance.appdata.xml.in  com.lakoliu.Furtherance.desktop.in  com.lakoliu.Furtherance.gschema.xml  meson.build
data/icons/: meson.build
po/: Furtherance.pot  LINGUAS  POTFILES  de.mo  de.po  es.po  fi.po  fj.po  fr.po  fr_FR.mo  fr_FR.po  he.po  it.po  meson.build  nb_NO.po  nl.po  pt.po  pt_BR.po  ptbr.po  ru.po  sk.po  tr.po  zh_Hant.po
scripts/: build-macos.sh  build-windows-installer.sh  build-windows.sh  package-deb.sh  package-linux.sh  package-macos.sh  sign-macos.sh
src/: app.rs  application.rs  autosave.rs  config.rs.in  constants.rs  database.rs  encryption.rs  fur_task.rs  fur_task_group.rs  furtherance.gresource.xml  localization.rs  login.rs  logout.rs  main.rs  meson.build  settings.rs  settings_manager.rs  style.rs  sync.rs  ui.rs  view_enums.rs
src/charts/: all_charts.rs  average_earnings_chart.rs  average_time_chart.rs  earnings_chart.rs  selection_earnings_recorded_chart.rs  selection_time_recorded_chart.rs  time_recorded_chart.rs
src/gtk/: csv_export_dialog.ui  dialogs.ui  history_box.ui  preferences_dialog.ui  preferences_window.ui  report.ui  style.css  task_details.ui  task_row.ui  tasks_group.ui  tasks_page.ui  window.ui
src/helpers/: color_utils.rs  dark_light_subscription.rs  flow_row.rs  idle.rs  messages.rs  midnight_subscription.rs  task_actions.rs  tasks.rs  wayland_idle.rs
src/helpers/idle/: linux_idle.rs  mac_win_idle.rs
src/locales/de/: main.ftl
src/locales/en-US/: main.ftl
src/locales/es/: main.ftl
src/locales/fi/: main.ftl
src/locales/fr/: main.ftl
src/locales/it/: main.ftl
src/locales/nl/: main.ftl
src/locales/pt-BR/: main.ftl
src/locales/pt-PT/: main.ftl
src/locales/ru/: main.ftl
src/locales/sk/: main.ftl
src/locales/tr/: main.ftl
src/models/: export_settings.rs  fur_idle.rs  fur_pomodoro.rs  fur_report.rs  fur_settings.rs  fur_shortcut.rs  fur_task.rs  fur_task_group.rs  fur_todo.rs  fur_user.rs  group_to_edit.rs  shortcut_to_add.rs  shortcut_to_edit.rs  task_to_add.rs  task_to_edit.rs
src/server/: encryption.rs  login.rs  logout.rs  sync.rs
src/tests/: timer_tests.rs
src/ui/: history_box.rs  preferences_dialog.rs  preferences_window.rs  report.rs  task_details.rs  task_row.rs  tasks_group.rs  tasks_page.rs  todos.rs  window.rs
src/update/: messages.rs  msg_helper_functions.rs
wix/: main.wxs
