[package]
name = "furtherance"
version = "24.10.5"
authors = ["Ricky Kresslein <ricky@unobserved.io>"]
description = "Track your time without being tracked."
license = "GPL-3.0-or-later"
edition = "2021"

[package.metadata.bundle]
name = "Furtherance"
identifier = "io.unobserved.furtherance"
copyright = "© Unobserved 2024"
icon = [
    "assets/icon/16x16.png",
    "assets/icon/32x32.png",
    "assets/icon/64x64.png",
    "assets/icon/128x128.png",
    "assets/icon/128x128@2x.png",
    "assets/icon/256x256.png",
    "assets/icon/256x256@2x.png",
    "assets/icon/512x512.png",
    "assets/icon/512x512@2x.png",
]
category = "Productivity"
short_description = "Track your time without being tracked."
long_description = """
Furtherance is a time tracking application that respects your privacy.
It allows you to track time spent on different activities without worrying about your data being captured and sold.
"""

[profile.release]
lto = true

[dependencies]
aes-gcm = "0.10"
async-stream = "0.3.5"
base64 = "0.22"
blake3 = "1.5"
config = "0.14"
chrono = { version = "0.4", features = ["alloc", "serde"] }
csv = "1.3.0"
dark-light = "1.1.1"
directories = "5.0"
fluent = "0.16"
futures-core = "0.3.30"
iced = { version = "0.13.1", features = [
    "advanced",
    "canvas",
    "image",
    "multi-window",
    "tokio",
] }
iced_aw = { version = "0.11.0", default-features = false, features = [
    "card",
    "color_picker",
    "context_menu",
    "date_picker",
    "number_input",
    "tabs",
    "time_picker",
] }
iced_fonts = { version = "0.1.1", features = ["bootstrap"] }
itertools = "0.13"
machine-uid = "0.5"
notify-rust = "4.11"
palette = "0.7.6"
plotters = "0.3"
plotters-iced = "0.11"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }
rfd = "0.14.1"
rusqlite = { version = "0.32", features = [
    "bundled",
    "chrono",
    "backup",
    "functions",
] }
rust-embed = "8.5"
rustc-hash = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-locale = "0.3.1"
sysinfo = "0.32"
toml = "0.8"
tokio = "1.39"
user-idle = "0.6"
webbrowser = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13.1"
zbus = "4.4"
uzers = "0.12"

[patch.crates-io]
dark-light = { git = "https://github.com/frewsxcv/rust-dark-light", rev = "3eb3e93dd0fa30733c3e93082dd9517fb580ae95" }

[build-dependencies]
winresource = "0.1.17"
