[package]
name = "furtherance"
version = "25.12.0"
authors = ["Ricky Kresslein <ricky@unobserved.io>"]
description = "Track your time without being tracked."
license = "GPL-3.0-or-later"
edition = "2024"

[package.metadata.bundle]
name = "Furtherance"
identifier = "io.unobserved.furtherance"
copyright = "© Unobserved 2025"
icon = [
    "assets/icon/16x16.png",
    "assets/icon/16x16@2x.png",
    "assets/icon/32x32.png",
    "assets/icon/32x32@2x.png",
    "assets/icon/128x128.png",
    "assets/icon/128x128@2x.png",
    "assets/icon/256x256.png",
    "assets/icon/256x256@2x.png",
    "assets/icon/512x512.png",
    "assets/icon/512x512@2x.png",
]
category = "Productivity"
short_description = "Track your time without being tracked."
long_description = """
Furtherance is a time tracking application that respects your privacy.
It allows you to track time spent on different activities without worrying about your data being captured and sold.
"""

[profile.release]
lto = true

[dependencies]
aes-gcm = "0.10"
async-stream = "0.3"
base64 = "0.22"
blake3 = "1.8"
config = "0.15"
chrono = { version = "0.4", features = ["alloc", "serde"] }
csv = "1.4"
dark-light = "2.0"
directories = "6.0"
fluent = "0.17"
futures-core = "0.3"
iced = { version = "0.14.0", features = [
    "advanced",
    "canvas",
    "image",
    "tokio",
] }
iced_aw = { version = "0.13.0", default-features = false, features = [
    "card",
    "color_picker",
    "context_menu",
    "date_picker",
    "number_input",
    "tabs",
    "time_picker",
] }
iced_fonts = { version = "0.3.0", features = ["bootstrap"] }
image = "0.25"
itertools = "0.14"
machine-uid = "0.5"
notify-rust = "4.11.7"
palette = "0.7.6"
plotters = "0.3"
plotters-iced = { git = "https://github.com/unobserved-io/plotters-iced", branch = "master" }
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
rfd = "0.16"
rusqlite = { version = "0.37", features = [
    "bundled",
    "chrono",
    "backup",
    "functions",
] }
rust-embed = "8.9"
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-locale = "0.3"
sysinfo = "0.37"
toml = "0.9"
tokio = { version = "1", features = ["full"] }
user-idle = "0.6"
webbrowser = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
zbus = "5.12"
uzers = "0.12"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-protocols-plasma = "0.3"
lazy_static = "1.5"

[build-dependencies]
winresource = "0.1"
